#3730 feat: Raft-based High Availability using Apache Ratis (#3731)
 feat(ha): replace legacy HA with Apache Ratis-based Raft implementation

  Removes the custom leader-follower replication stack (HAServer,
  ReplicatedDatabase, Leader2ReplicaNetworkExecutor, and the full message
  protocol) and replaces it with a new `ha-raft` module built on Apache
  Ratis 3.2.2.

  Core new components:
  - RaftHAPlugin / RaftHAServer: Ratis RaftServer wrapper with peer
    discovery, dynamic membership, K8s auto-join, and configurable gRPC
    port (HA_RAFT_PORT)
  - RaftReplicatedDatabase: LocalDatabase wrapper that commits transactions
    through the Raft log (3-phase commit with schema save under lock)
  - ArcadeStateMachine: SimpleStateMachineStorage-backed state machine that
    applies WAL pages and schema entries; tracks applied-index persistently
    to survive restarts
  - RaftGroupCommitter: batched Raft submission with LZ4 WAL compression,
    ALL-quorum watch, cancellable pending entries, and an idempotency cache
  - RaftTransactionBroker: single facade for all commit/schema/snapshot
    paths; codec validation and snapshot 503 guard
  - SnapshotInstaller: crash-safe snapshot install with zip-slip/zip-bomb
    protection, NIO streams, symlink defence, and exponential backoff retry
  - ClusterMonitor: replication-lag tracking and leader health watchdog

  Hardening and features ported from apache-ratis branch:
  - Linearizable reads and configurable read consistency
  - PBKDF2 cluster token with auth forwarding (replica-to-leader and
    snapshot download)
  - LeaderProxy: HTTP-based write forwarding so follower-originated
    transactions and schema changes reach the leader transparently
  - IdempotencyCache for at-most-once server command delivery
  - WAL version-gap detection (WALVersionGapException) and gap handling on
    follower apply
  - LSM index compaction replication to followers
  - User create/drop routed through Raft (SECURITY_USERS_ENTRY log type)
  - 